# Cocktail-Advisor

./: .gitignore  README.md  index.html  pyproject.toml
app/: .check.py.un~  check.py  main.py
app/routers/: predict.py
app/schemas/: question.py
app/services/: rag_chain.py
